<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/verticalLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context="org.didong.didong.ReportActivity$PlaceholderFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="10"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/weekLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/week"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/week_hint"
                android:inputType="number" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/yearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/year"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/year_hint"
                android:inputType="number" />
        </android.support.design.widget.TextInputLayout>
        <Button
            android:id="@+id/previousWeek"
            style="@style/Widget.AppCompat.Button.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/previous_week"
            tools:layout_editor_absoluteY="0dp"
            android:layout_marginEnd="8dp" />

        <Button
            android:id="@+id/nextWeek"
            style="@style/Widget.AppCompat.Button.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next_week"
            tools:layout_editor_absoluteY="0dp"
            android:layout_marginEnd="8dp"
            />

    </LinearLayout>

    <ExpandableListView
        android:id="@+id/tagActivityList"
        style="@android:style/Widget.ExpandableListView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


</LinearLayout>