<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView android:id="@+id/currentdate_card" xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="?attr/colorPrimary"
    card_view:cardElevation="5dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/currentdate_panel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="48dp">

            <EditText
                android:id="@+id/currentDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/current_date"
                android:inputType="date" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/chooseCurrentDate"
            style="@style/Widget.AppCompat.Button.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_current_date"
            card_view:layout_constraintBottom_toBottomOf="@id/currentdate_panel"
            card_view:layout_constraintStart_toEndOf="@id/currentdate_panel"
            tools:layout_editor_absoluteY="0dp"
            android:layout_marginEnd="8dp" />

        <Button
            android:id="@+id/goToday"
            style="@style/Widget.AppCompat.Button.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/goto_today"
            card_view:layout_constraintBottom_toBottomOf="@id/currentdate_panel"
            card_view:layout_constraintStart_toEndOf="@id/chooseCurrentDate"
            />

        <DatePicker
            android:id="@+id/currentDatePicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            card_view:layout_constraintTop_toBottomOf="@id/currentdate_panel" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
